# kvasir-ontology

./: .gitignore  pyproject.toml  test_descriptions.py
src/kvasir_ontology/: _description_utils.py  ontology.py
src/kvasir_ontology/code/: data_model.py  interface.py
src/kvasir_ontology/entities/analysis/: data_model.py  interface.py
src/kvasir_ontology/entities/data_source/: data_model.py  interface.py
src/kvasir_ontology/entities/dataset/: data_model.py  interface.py
src/kvasir_ontology/entities/model/: data_model.py  interface.py
src/kvasir_ontology/entities/pipeline/: data_model.py  interface.py
src/kvasir_ontology/graph/: data_model.py  interface.py
src/kvasir_ontology/visualization/: data_model.py  interface.py
